# crud-class

./: README.md  pyproject.toml
backend/: crud.py  database.py  router.py  schema.py
