[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Mateus Schenkel <contameusjogosonline@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = {extras = ["email"], version = "^2.12.5"}
psycopg2 = "^2.9.11"
psycopg2-binary = "^2.9.11"
fastapi = "^0.129.0"
uvicorn = "^0.40.0"
email-validator = "^2.3.0"
sqlalchemy = "^2.0.46"
streamlit = "^1.54.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
